# mantis

./: CMakeLists.txt  README.md  package.xml
include/legacy/mantis/: MonteCarlo.cpp  MonteCarlo.h
include/legacy/mantis/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml
include/legacy/mantis2/: Mantis2Error.h  Mantis2Params.h  PoseEstimator.h  QuadDetection_old.h
include/mantis/: MantisRequest.h  MantisTypes.h  MonteCarlo.cpp  MonteCarlo.h
include/mantis/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
include/mantis/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
include/mantis/error/: MantisRequest.h  computeError.h
include/mantis2/: Mantis2Error.h  Mantis2Params.h  Mantis2Types.h  PoseEstimator.h  QuadDetection.h
include/mantis3/: CoPlanarPoseEstimator.cpp  CoPlanarPoseEstimator.h  GridRenderer.cpp  GridRenderer.h  HypothesisEvaluation.h  HypothesisGeneration.h  Mantis3Params.h  Mantis3Types.h  Markov.cpp  Markov.h  PoseAdjustment.h  PoseClusterer.cpp  PoseClusterer.h  PosePub.h  QuadDetection.h
launch/: mantis.launch  unit_test.launch
params/: map.yaml  matGen.m  matGen_dense.m  out.yaml
src/: mantis2.cpp  mantis3.cpp  mantis_client.cpp  mantis_server.cpp
srv/: Mantis.srv  mantis.srv  mantisService.srv
test/: opengl_test.cpp  unit_test.cpp
test/legacy/: unit_test.cpp
